Creación del UserBundle para el inicio de sesión

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: "%locale%" }
+    translator:      { fallback: "%locale%" }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -61,6 +61,15 @@ braincrafted_bootstrap:
         bootstrap_output: %kernel.root_dir%/Resources/less/bootstrap.less
         bootstrap_template: BraincraftedBootstrapBundle:Bootstrap:bootstrap.less.twig
     
+#Gestion de usuario FOSUserBundle
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: sagaco\UserBundle\Entity\User
+
+# Translaciones del FOSUserBundle
+framework:
+    translator: ~
     
 # Doctrine Configuration
 doctrine:
